--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -1,13 +1,15 @@
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/bower_components/bourbon/app/assets/stylesheets/bourbon";
+@import "/Users/chilliscope/Documents/Webseiten/toolbox/bower_components/neat/app/assets/stylesheets/_neat";
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/extends";
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/mixins";
 @import "/Users/chilliscope/Documents/Webseiten/toolbox/sass/myMixins/breakpoints";
 
 @import "utils/_variables";
 @import "utils/_mixins";
+@import "base/_typography";
 @import "utils/_icons";
 @import "base/_grid";
-@import "base/_typography";
+
 @import "base/_globals";
 @import "content/_layout";
 @import "content/_navigation";
