--- a/sass/content/_layout.scss
+++ b/sass/content/_layout.scss
@@ -7,7 +7,7 @@ body{
 /*        height:100vH;*/
         background:{
             color:rgba(0,0,0,.5);
-            position: center bottom;
+            position: 50% 25%;
             repeat:no-repeat;
             size:cover;
         }
@@ -16,8 +16,11 @@ body{
             height:$footerHomeHeight;
         }
     }
-    margin-bottom: $footerHeight;
-    > footer{
+    &:not(.kontakt){
+      margin-bottom: $footerHeight;  
+    }
+
+    &:not(.kontakt) > footer{
         height:$footerHeight;
         width: 100vW;
                     position: absolute;
@@ -34,7 +37,7 @@ body{
 
 
 #header {
-    padding-top:$vgrid;
+/*    padding-top:$vgrid;*/
     .logo {
         position:relative;
         span.name {
@@ -42,16 +45,19 @@ body{
         }
         span.description{
             position: absolute;
-            right:125px;
-            bottom: 35px;
-            letter-spacing: .01em;
+            @media screen and (min-width:$screen-md){
+                right:125px;
+                bottom: 43px;
+                letter-spacing: .01em;
+                width: 375px;
+            }
         }
     }
 }
 main {
-    body.leistungen > &{
+    body.leistungen > &,body.kontakt > &{
         background: #eee;
-        padding-top: 6em;
+        padding-top: 4.25 * $vgrid;
     }
 }
 /**** Footer ****/
@@ -59,9 +65,12 @@ body > footer {
     * {
         color:white;
     }
+    .impressum {
+        padding:$vgrid 0;
+    }
 }
 
 body:not(.home) > footer{
     background: $primary-color;
-    
+    padding:$vgrid 0;
 }
