--- a/sass/content/_media.scss
+++ b/sass/content/_media.scss
@@ -50,3 +50,61 @@
         height: 100%;
     }
 }
+
+/**** Portfolio ****/
+#portfolio{
+    margin:0 -1%;
+}
+.portfolio-item{
+    position: relative;
+    float:left;
+    width: 23%;
+    margin:1%;
+    overflow: hidden;
+    > [class*="portfolio_"]{
+        position:absolute;
+        top:0;
+        bottom: 0;
+        left:0;
+        right: 0;
+        background: rgba(0,0,0,1);
+    }
+    > .portfolio_content{
+        *{color:white !important;}
+        text-align: center;
+        padding:2em;
+        left:-100%;
+        right:100%;
+        z-index:99;
+        h2 {@include ellipsis(100%);}
+        svg {
+            height: 3px;
+            width: 100%;
+            margin-top:1em;
+            margin-bottom: 1em;
+        }
+        p {
+            font-size: 1em;
+            line-height: 1.2;
+        }
+        .view-article{display: none;}
+    }
+    &:hover{
+        overflow:visible;
+        > .portfolio_content{
+            left:100%;
+            right:calc(-109%);
+            z-index: 999;
+        }
+        > .portfolio_thumbnail{
+            padding:5px;
+        }
+    }
+    &:nth-child(4n):hover{
+        .portfolio_content{
+            left:-109%;
+            right:100%;
+        }
+    }
+    
+}
